test-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    purpose: To-host-Observability-stack
